--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aquário</title>
-    <link rel="shortcut icon" href="imagens_aquario/peixe_icon.webp" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens_aquario/image-removebg-preview.png" type="image/x-icon">
     <link rel="stylesheet" href="css/aquario.css">
 </head>
 <body>
@@ -14,9 +14,10 @@
             <img src="imagens_aquario/image-removebg-preview.png" class="logo">
             <nav>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Criação de Peixes</a></li>
-                    <li><a href="">Calculadora</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="html/criacaopeixe.html">Criação de Peixes</a></li>
+                    <li><a href="html/tipospeixe.html">Tipos de Peixes</a></li>
+                    <li><a href="html/calculadora.html">Calculadora</a></li>
                 </ul>
             </nav>
             <img src="imagens_aquario/menu.png" class="menu-icon">
@@ -25,8 +26,7 @@
         <div class="row">
             <div class="coluna">
                 <h1>Aquário</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga dignissimos perferendis porro voluptatum asperiores soluta aliquam, aut unde labore adipisci architecto, molestiae sapiente atque non ullam? Ullam blanditiis quas consectetur!</p>
-                <button type="button">Explore</button>
+                <button type="button">Seguir para Calculadora</button>
             </div>
             <div class="coluna cards">
                 <div class="card card1">
@@ -35,11 +35,11 @@
                 </div>
                 <div class="card card2">
                     <h5>Peixes de Água Doce</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem debitis excepturi hic.</p>
+                    <p>Os peixes de água doce do Brasil são inúmeros, existem cerca de 25.000 espécies, com grande variedade de formas e habitats</p>
                 </div>
                 <div class="card card3">
-                    <h5>Alguma Coisa</h5>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem debitis excepturi hic.</p>
+                    <h5>Peixes de Água Salgada</h5>
+                    <p>Cuidar de um aquário de peixes de água salgada não é tarefa fácil, então siga as dicas!</p>
                 </div>
                 <div class="card card4">
                     <h5>Calculadora para Aquários</h5>
