--- a/html/tipospeixe.html
+++ b/html/tipospeixe.html
@@ -6,8 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tipos de Peixes</title>
     <link rel="shortcut icon" href="../imagens_aquario/image-removebg-preview.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/tipospeixe.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="navbar">
+            <img src="../imagens_aquario/image-removebg-preview.png" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../html/criacaopeixe.html">Criação de Peixes</a></li>
+                    <li><a href="../html/calculadora.html">Calculadora</a></li>
+                </ul>
+            </nav>
+            <img src="../imagens_aquario/menu.png" class="menu-icon">
+        </div>
+
+    <h1>Tipos de peixes: Tudo que  você precisa saber antes da compra.</h1>
 </body>
 </html>
