--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
             <img src="imagens_aquario/image-removebg-preview.png" class="logo">
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
                     <li><a href="html/criacaopeixe.html">Criação de Peixes</a></li>
                     <li><a href="html/tipospeixe.html">Tipos de Peixes</a></li>
                     <li><a href="html/calculadora.html">Calculadora</a></li>
@@ -26,20 +25,19 @@
         <div class="row">
             <div class="coluna">
                 <h1>Aquário</h1>
-                <button type="button">Seguir para Calculadora</button>
             </div>
             <div class="coluna cards">
                 <div class="card card1">
                     <h5>Criação de Peixes</h5>
-                    <p>Dá-se o nome de piscicultor à pessoa que decide atuar na criação ou multiplicação de peixes.</p>
+                    <p>Piscicultor é a pessoa que decide atuar na criação ou multiplicação de peixes.</p>
                 </div>
                 <div class="card card2">
                     <h5>Peixes de Água Doce</h5>
-                    <p>Os peixes de água doce do Brasil são inúmeros, existem cerca de 25.000 espécies, com grande variedade de formas e habitats</p>
+                    <p>Os peixes de água doce do Brasil são inúmeros!</p>
                 </div>
                 <div class="card card3">
                     <h5>Peixes de Água Salgada</h5>
-                    <p>Cuidar de um aquário de peixes de água salgada não é tarefa fácil, então siga as dicas!</p>
+                    <p>Cuidar de um peixe não é tarefa fácil!</p>
                 </div>
                 <div class="card card4">
                     <h5>Calculadora para Aquários</h5>
