--- a/html/criacaopeixe.html
+++ b/html/criacaopeixe.html
@@ -6,8 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Criação de Peixes</title>
     <link rel="shortcut icon" href="../imagens_aquario/image-removebg-preview.png" type="image/x-icon">
+    <link rel="stylesheet" href="../css/criacaopeixe.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="navbar">
+            <img src="../imagens_aquario/image-removebg-preview.png" class="logo">
+            <nav>
+                <ul>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../html/tipospeixe.html">Tipos de Peixes</a></li>
+                    <li><a href="../html/calculadora.html">Calculadora</a></li>
+                </ul>
+            </nav>
+            <img src="../imagens_aquario/menu.png" class="menu-icon">
+        </div>
+
+    <h1>Criação de peixes: Tudo que  você precisa saber antes da compra.</h1>
+
+    <div class="containers">
+        <div class="flex-child img">
+          <img src="">
+        </div>
+       
+        <div class="flex-child texto">
+            <p>A piscicultura é um dos ramos da aquicultura, que desenvolve o cultivo de peixes e outros organismos aquáticos. Essa modalidade de criação cresceu muito nos últimos anos e movimenta uma parte importante da economia do mercado no Brasil atualmente. Graças ao extenso território litorâneo do país, além da enorme produção local, o Brasil se tornou um dos países que mais consome peixe no mundo. Na piscicultura a criação dos peixes é monitorada, as espécies são totalmente controladas, desde o início da vida até o momento em que atingem a condição ideal para consumo, com o uso de ferramentas, substâncias específicas e acompanhamento periódico para estimular o crescimento saudável dos animais.</p>
+        </div>
+    </div>
 </body>
 </html>
