--- a/html/tipospeixe.html
+++ b/html/tipospeixe.html
@@ -5,23 +5,77 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tipos de Peixes</title>
-    <link rel="shortcut icon" href="../imagens_aquario/image-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../imagens_aquario/fishiconblack.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/tipospeixe.css">
 </head>
 <body>
     <div class="container">
+        <video autoplay loop muted plays-inline class="bg-video">
+            <source src="../imagens_criacao/aguaviva.mp4" type="video/mp4">
+        </video>
         <div class="navbar">
             <img src="../imagens_aquario/image-removebg-preview.png" class="logo">
             <nav>
                 <ul>
                     <li><a href="../index.html">Home</a></li>
-                    <li><a href="../html/criacaopeixe.html">Criação de Peixes</a></li>
                     <li><a href="../html/calculadora.html">Calculadora</a></li>
                 </ul>
             </nav>
             <img src="../imagens_aquario/menu.png" class="menu-icon">
         </div>
+    </div>
 
-    <h1>Tipos de peixes: Tudo que  você precisa saber antes da compra.</h1>
+    <h1>Tudo sobre Criação de Peixes</h1>
+
+<div class="containers_texto">
+    <div class="psic">
+        <h3>Como se tornar um piscicultor?</h3>
+        <p>Para iniciar um projeto de piscicultura, o primeiro passo é buscar orientação sobre as normas regulamentadoras da sua região. Essa modalidade de criação de peixes, deve ser estruturada de acordo com os órgãos regularizadores do meio ambiente, possibilitando que o criador comercialize o produto de forma totalmente legal. Os peixes serão rigorosamente avaliados pela vigilância sanitária e precisam atender todos os padrões de qualidades exigidos para o consumo.</p>
+    </div>
+
+    <div class="infra">
+        <h3>Infraestrutura</h3>
+        <p>Você deverá observar principalmente a água em termos de quantidade e qualidade, o solo, a topografia do terreno e os fatores climáticos. A piscicultura pode ser feita em diferentes lugares como mar, represas, lagos, lagos artificiais, tanques de redes, tanques comuns, barragens ou viveiros. As duas principais alternativas para trabalhar são a da construção de um lago artificial ou viveiro.</p>
+    </div>
+</div>
+
+<div class="containers_texto">
+    <div class="psic">
+        <h3>Peixes de Água Doce</h3>
+        <p>Independente da espécie do peixe de água doce, sabe-se que é no ambiente aquático que os peixes realizam todas as suas funções vitais, como alimentação, crescimento, respiração, reprodução, eliminação dos metabólitos (urina e fezes), entre outras funções. Além disso, são animais classificados como ectotérmicos, ou seja, possuem a temperatura do corpo idêntica à da água onde vivem. Por isso, quando há brusca alteração na água os peixes ficam inativos.</p>
+        
+        <div class="coluna cards">
+            <div class="card card2">
+                <p>Tilápia</p>
+            </div>
+            <div class="card card5">
+                <p>Raia</p>
+            </div>
+            <div class="card card6">
+                <p>Lambari</p>
+            </div>
+        </div>
+
+    </div>
+
+    <div class="infra">
+        <h3>Peixes de Água Salgado</h3>
+        <p>Sabemos que os mares e oceanos são imensos. Não dá nem para quantificar o número de espécies de animais que vivem dentro das águas salgadas. De fato, ainda não conhecemos todos os seres vivos que moram nas profundezas dos mares. No entanto, é preciso frisar que muitos peixes já são muito apreciados por todos, seja pelo sabor ou pela beleza exótica. Existem centenas de espécies de águas salgadas.</p>
+
+        <div class="coluna cards">
+            <div class="card card9">
+                <p>Tainha</p>
+            </div>
+            <div class="card card11">
+                <p>Cavala</p>
+            </div>
+            <div class="card card13">
+                <p>Robalo</p>
+            </div>
+        </div>
+
+    </div>
+</div>
+
 </body>
 </html>
