--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aquário</title>
-    <link rel="shortcut icon" href="imagens_aquario/image-removebg-preview.png" type="image/x-icon">
+    <link rel="shortcut icon" href="imagens_aquario/fishiconblack.png" type="image/x-icon">
     <link rel="stylesheet" href="css/aquario.css">
 </head>
 <body>
@@ -14,8 +14,7 @@
             <img src="imagens_aquario/image-removebg-preview.png" class="logo">
             <nav>
                 <ul>
-                    <li><a href="html/criacaopeixe.html">Criação de Peixes</a></li>
-                    <li><a href="html/tipospeixe.html">Tipos de Peixes</a></li>
+                    <li><a href="html/tipospeixe.html">Criação de Peixes</a></li>
                     <li><a href="html/calculadora.html">Calculadora</a></li>
                 </ul>
             </nav>
